--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
             :root {
                 --text-color: #495057;
                 --text-color-secondary: #6c757d;
-                --primary-color: #111111;
-                --secondary-color: #050505;
+                --primary-color: #4f46e5;
+                --secondary-color: #6366f1;
                 --primary-color-text: #ffffff;
                 --font-family: MuseoSans, Pyidaungsu, sans-serif;
                 --gray-50: #fafafa;
@@ -84,7 +84,7 @@
 
             .active-tab {
                 color: whitesmoke;
-                border-bottom: 2px solid #136f3e;
+                border-bottom: 2px solid gold;
             }
         </style>
     </head>
