--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 --gray-700: #616161;
                 --gray-800: #424242;
                 --gray-900: #212121;
-                --warning-color: #fcc404;
+                --gold-color: #fcc404;
                 --info-color: #3b82f6;
                 --danger-color: #fc2c24;
             }
