--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,6 @@
             .custom-tabs {
                 display: flex;
                 justify-content: space-around;
-                border-bottom: 2px solid #111111;
             }
 
             .tab-item {
@@ -83,7 +82,7 @@
             }
 
             .active-tab {
-                color: whitesmoke;
+                color: gold;
                 border-bottom: 2px solid gold;
             }
         </style>
