--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&family=Quicksand:wght@500;600;700;800&display=swap" rel="stylesheet" />
         <script src="https://cdn.tailwindcss.com"></script>
-        <script src="/registerSW.js"></script>
+        <link rel="manifest" href="/app.webmanifest" />
         <style>
             * {
                 font-family: 'Poppins', sans-serif;
