--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
             /* App Width Size */
             .appWidth {
                 width: 100% !important;
+                box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.274);
             }
             @media (min-width: 769px) {
                 .appWidth {
