--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             :root {
                 --text-color: #495057;
                 --text-color-secondary: #6c757d;
-                --primary-color: #4f46e5;
+                --primary-color: #0260bf;
                 --secondary-color: #6366f1;
                 --primary-color-text: #ffffff;
                 --font-family: MuseoSans, Pyidaungsu, sans-serif;
@@ -84,8 +84,8 @@
             }
 
             .active-tab {
-                color: gold;
-                border-bottom: 2px solid gold;
+                color: #0260bf;
+                border-bottom: 2px solid #0260bf;
             }
         </style>
     </head>
